frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
  - port: 5173
    targetPort: 5173
  selector:
    app: frontend
